web-infras/parser/tests/fixtures/babel/es2017/async-arrow/parenthesized-binding-pattern/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,20)
1|var foo = async ([(foo)]) => {};
 |                  ^
